--- a/ufon.css
+++ b/ufon.css
@@ -13,7 +13,7 @@ body{
 }
 .profile-img img{
     width: 100%;
-    height: 100%;
+    height: 80;
 }
 .about{
     margin-left: 15px;
@@ -21,7 +21,7 @@ body{
 .profile-info{
     width: 60%;
     height: 100vh;
-    float: left;
+    /* float: left; */
     padding: 0 30px;
     overflow: scroll;
     overflow-x: hidden;
@@ -38,14 +38,17 @@ body{
 height: 40px;
 margin-right: 15px;
 }
+
 .social-media{
     margin-top: 20px;
     margin-left: 15px;
 }
+
 .info img{
     height: 150px;
     margin: 2px;
 }
+
 .info{
     display: inline-block;
     width: 25%;
@@ -65,26 +68,74 @@ margin-right: 15px;
     display: block;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .trip{
-    width: 25%;
+   width: 45%;
     padding: 20px 10px ;
     margin: 2%;
     box-shadow: 0  20px 5px rgba(37, 73, 214, 0.18);
     background-color: white;
     font-size: 15px;
     float: left;
+    text-align: left;
     padding: 4px;
     margin-bottom: 8px;
     margin-left: 5px;
 }
+
 h3{
     padding-top: 5px;
     text-align:left;
     padding-left:5px;
 }
+
 .copy{
     text-align: center;
     margin-bottom: 100px;
     margin-top: 300px;
-    float: left;
+}
+
+.form{
+    margin-top: 30px;
+}
+.form h2{
+    padding: 15px;
+    margin-left: 5px;
+}
+
+.input-group input{
+    width:45%;
+    border: 0;
+    outline: none !important;
+    padding: 10px;
+    margin: 2%;
+    display: inline-block;
+    background: white;
+}
+
+.text-area textarea{
+    width: 45%;
+    border: 0;
+    outline: none !important;
+    padding: 10px;
+    margin: 2%;
+    background: white;
+}
+.submit-btn{
+    width: 45%;
+    border: 0;
+    text-align: center;
+    outline: none !important;
+    padding: 10px 20px;
+    margin: 2%;
+    background: #2ab0ff;
+    cursor: pointer;
+    color: white;
+}
+
+@media only screen and (max-width:900px)
+{
+    .profile-info{
+        width: 100%
+    }
 }
